# py_nova

./: README.md  curve.py  hash.py  hash_to_curve.py  hash_to_curve.sage  pallas.py  pederson.py  pederson_thirdparty.py  pyproject.toml  r1cs.py  squareroottab.sage
src/: pallas.py  pederson.py  poseidon.py  r1cs.py  transcript.py  utils.py
src/zcash_pallas_unused/: hash_to_curve.py  hash_to_curve.sage  squareroottab.sage
